Fix image alignment issue

--- a/web/themes/custom/drupalbristol/less/components/speakers.less
+++ b/web/themes/custom/drupalbristol/less/components/speakers.less
@@ -1,13 +1,9 @@
+@screen md {
+  .view-speakers .node .field--type-image {
+    @apply .tw-mr-0;
+  }
+}
+
 .view-speakers .field--type-image img {
-  @apply .tw-border;
-  @apply .tw-border-grey-light;
-  @apply .tw-border-solid;
-  @apply .tw-mb-2;
-  @apply .tw-mt-0;
-  @apply .tw-mx-auto;
-  @apply .tw-my-0;
-  @apply .tw-p-1;
-  @apply .tw-rounded-full;
-  @apply .tw-shadow;
-  @apply .tw-w-4/5;
+  @apply .tw-border-grey-light .tw-border-solid .tw-border .tw-mb-2 .tw-mt-0 .tw-mx-auto .tw-my-0 .tw-p-1 .tw-rounded-full .tw-shadow .tw-w-4/5;
 }
